[#BROZERLY FREE] Update site with new information and images

--- a/404.html
+++ b/404.html
@@ -17,9 +17,9 @@
 <link rel="canonical" href='https://www.brozerly.com'/>
 
 <meta property="description"
-      content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+      content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 <meta name="description"
-      content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+      content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 
 
 <!-- Mobile friendly  -->
@@ -60,11 +60,12 @@
 <meta property="og:url" content='https://www.brozerly.com'/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Brozerly"/>
-<meta property="og:description" content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+<meta property="og:description" content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 <meta property="og:locale" content="es_ES"/>
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="eu_ES" />
 <meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:image" content='https://www.brozerly.com/public/lang/es/Landing.png'/>
 <meta property="og:image" content='https://www.brozerly.com/public/lang/es/phone_BrozerlyApp.png'/>
 <meta property="og:rich_attachment" content="true"/>
 
@@ -74,7 +75,8 @@
 
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/>
+<!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/> -->
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:700,400,300,100" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400, 300" rel="stylesheet" type="text/css"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -202,7 +204,7 @@
         </a>
       </div>
       <div class="row">
-        <div class="col s12 light">&copy; 2017 Brozerly</div>
+        <div class="col s12 light">&copy; 2018 Brozerly</div>
       </div>
     </div>
   </div>
