--- a/en/404.html
+++ b/en/404.html
@@ -17,9 +17,9 @@
 <link rel="canonical" href='https://www.brozerly.com/en/'/>
 
 <meta property="description"
-      content="Friendship is your best protection. Brozerly is your crowdfunding app for personal needs. The first social app for financial help and personal needs. Brozerly allows you to ask for help in your network of friends so that your contacts can help you with your personal needs. Crowdfunding app."/>
+      content="Free and no fees !. Friendship is your best protection. Brozerly is your crowdfunding app for personal needs. The first social app for financial help and personal needs. Brozerly allows you to ask for help in your network of friends so that your contacts can help you with your personal needs. Crowdfunding app."/>
 <meta name="description"
-      content="Friendship is your best protection. Brozerly is your crowdfunding app for personal needs. The first social app for financial help and personal needs. Brozerly allows you to ask for help in your network of friends so that your contacts can help you with your personal needs. Crowdfunding app."/>
+      content="Free and no fees !. Friendship is your best protection. Brozerly is your crowdfunding app for personal needs. The first social app for financial help and personal needs. Brozerly allows you to ask for help in your network of friends so that your contacts can help you with your personal needs. Crowdfunding app."/>
 
 
 <!-- Mobile friendly  -->
@@ -60,11 +60,12 @@
 <meta property="og:url" content='https://www.brozerly.com/en/'/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Brozerly"/>
-<meta property="og:description" content="Friendship is your best protection. Brozerly is your crowdfunding app for personal needs. The first social app for financial help and personal needs. Brozerly allows you to ask for help in your network of friends so that your contacts can help you with your personal needs. Crowdfunding app."/>
+<meta property="og:description" content="Free and no fees !. Friendship is your best protection. Brozerly is your crowdfunding app for personal needs. The first social app for financial help and personal needs. Brozerly allows you to ask for help in your network of friends so that your contacts can help you with your personal needs. Crowdfunding app."/>
 <meta property="og:locale" content="en_GB"/>
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="eu_ES" />
 <meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:image" content='https://www.brozerly.com/public/lang/en/Landing.png'/>
 <meta property="og:image" content='https://www.brozerly.com/public/lang/en/phone_BrozerlyApp.png'/>
 <meta property="og:rich_attachment" content="true"/>
 
@@ -74,7 +75,8 @@
 
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/>
+<!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/> -->
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:700,400,300,100" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400, 300" rel="stylesheet" type="text/css"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -202,7 +204,7 @@
         </a>
       </div>
       <div class="row">
-        <div class="col s12 light">&copy; 2017 Brozerly</div>
+        <div class="col s12 light">&copy; 2018 Brozerly</div>
       </div>
     </div>
   </div>
