--- a/eu/faq.html
+++ b/eu/faq.html
@@ -17,9 +17,9 @@
 <link rel="canonical" href='https://www.brozerly.com/eu/'/>
 
 <meta property="description"
-      content="Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
+      content="Guztiz doakoa !. Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
 <meta name="description"
-      content="Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
+      content="Guztiz doakoa !. Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
 
 
 <!-- Mobile friendly  -->
@@ -60,11 +60,12 @@
 <meta property="og:url" content='https://www.brozerly.com/eu/'/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Brozerly"/>
-<meta property="og:description" content="Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
+<meta property="og:description" content="Guztiz doakoa !. Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
 <meta property="og:locale" content="eu_ES"/>
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="eu_ES" />
 <meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:image" content='https://www.brozerly.com/public/lang/eu/Landing.png'/>
 <meta property="og:image" content='https://www.brozerly.com/public/lang/eu/phone_BrozerlyApp.png'/>
 <meta property="og:rich_attachment" content="true"/>
 
@@ -72,7 +73,8 @@
 
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/>
+<!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/> -->
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:700,400,300,100" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400, 300" rel="stylesheet" type="text/css"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -171,7 +173,7 @@
        </div>
        <div class="collapsible-body">
          <p>
-           Brozerly, aplikazioaren zure kontaktuen sarean laguntza ekonomikoa galdegiteko pentsatua den sare soziala da. Crowdfunding-en antzekoa, baina modu pribatuan eta behar pertsonaletarako pentsatua.  <br><br>Facebook, Twitter eta Google Plus-eko gure profiletan Brozerlyren erabilpenaren kasuen adibideak partekatzen ohi ditugu.  <br><br>Bideo honetan Brozerlyren erabilpenaren adibide bat ikus dezakezu. <br><br><div class='video-container'> <iframe width='800' height='480'src='https://www.youtube.com/embed/G92L_ocJPGs?rel=0' frameborder='0' allowfullscreen)></iframe></div>
+           Brozerly, aplikazioan dituzun kontaktuen sarean laguntza ekonomikoa galdegiteko pentsatua den sare soziala da. Crowdfunding-en antzekoa, baina modu pribatuan eta behar pertsonaletarako pentsatua. <br><br>Adibidez, zure kontaktuei laguntza eskatzeko edo zerbaitetarako denen artean diru-kopuru bat jartzeko erabili dezakezu. Konpondu behar duzun zerbait, denen artean opari bat, zure lagunekin afari bat...Zeuk erabakitzen duzu Brozerly zertarako erabili. <br><br>Facebook, Twitter eta Google Plus-eko gure profiletan Brozerlyren erabilpenaren kasuen adibideak partekatzen ohi ditugu. <br><br>Bideo honetan Brozerlyren erabilpenaren adibide bat ikus dezakezu. <br><br><div class='video-container'> <iframe width='800' height='480'src='https://www.youtube.com/embed/G92L_ocJPGs?rel=0' frameborder='0' allowfullscreen)></iframe></div>
          </p>
        </div>
      </li>
@@ -179,11 +181,11 @@
      <li>
        <div class="collapsible-header brozerly-faq-title">
          <i class="material-icons">help_outline</i>
-         Zer da SOS bat eta nola eskatzen dut laguntza Brozerlyn?
+         Zer da SOS bat eta nola eskatzen ditut ekarpenak Brozerlyn?
        </div>
        <div class="collapsible-body">
          <p>
-           Brozerlyn laguntza eskatzeko modua hauxe da: SOS bat bidali behar duzu eskatzen duzun zenbatekoa, deskribapena (dirua zertarako eskatzen den azaldu behar da hemen) eta ekarpenak egiteko azken data aipatuz. SOS bat bidaltzen denean, Brozerlyn dituzun kontaktuei zure SOSan parte hartzeko, hala nahi badute, jakinarazpen bat heltzen zaie. <br><br> Brozerlyn SOS publiko bat igortzea posible da ere. Modu horretan Brozerlyren erabiltzaile guztiek parte har dezakete. SOSa beste sare sozialetan parteka ditzakezu baita ere, Brozerlyn kontu bat oraindik ez dutenek zure SOSan parte har dezaten animatzeko.
+           Brozerlyn ekarpenak eskatzeko modua hauxe da: SOS bat bidali behar duzu eskatzen duzun zenbatekoa, deskribapena (dirua zertarako eskatzen den azaldu behar da hemen) eta ekarpenak egiteko azken data aipatuz. SOS bat bidaltzen denean, Brozerlyn dituzun kontaktuei zure SOSan parte hartzeko, hala nahi badute, jakinarazpen bat heltzen zaie. <br><br>Brozerlyn SOS publiko bat igortzea posible da ere. Modu horretan Brozerlyren erabiltzaile guztiek parte har dezakete. SOSa beste sare sozialetan parteka ditzakezu baita ere, Brozerlyn kontu bat oraindik ez dutenek zure SOSan parte har dezaten animatzeko.
          </p>
        </div>
      </li>
@@ -241,7 +243,7 @@
         </a>
       </div>
       <div class="row">
-        <div class="col s12 light">&copy; 2017 Brozerly</div>
+        <div class="col s12 light">&copy; 2018 Brozerly</div>
       </div>
     </div>
   </div>
