--- a/eu/tos.html
+++ b/eu/tos.html
@@ -17,9 +17,9 @@
 <link rel="canonical" href='https://www.brozerly.com/eu/'/>
 
 <meta property="description"
-      content="Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
+      content="Guztiz doakoa !. Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
 <meta name="description"
-      content="Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
+      content="Guztiz doakoa !. Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
 
 
 <!-- Mobile friendly  -->
@@ -60,11 +60,12 @@
 <meta property="og:url" content='https://www.brozerly.com/eu/'/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Brozerly"/>
-<meta property="og:description" content="Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
+<meta property="og:description" content="Guztiz doakoa !. Laguntasuna babes onena da. Brozerly zure crowdfunding-ko behar pertsonalentzako aplikazioa da. Behar pertsonaletarako laguntza ekonomikoaren lehen app soziala. Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu Crowdfunding app."/>
 <meta property="og:locale" content="eu_ES"/>
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="eu_ES" />
 <meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:image" content='https://www.brozerly.com/public/lang/eu/Landing.png'/>
 <meta property="og:image" content='https://www.brozerly.com/public/lang/eu/phone_BrozerlyApp.png'/>
 <meta property="og:rich_attachment" content="true"/>
 
@@ -72,7 +73,8 @@
 
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/>
+<!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/> -->
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:700,400,300,100" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400, 300" rel="stylesheet" type="text/css"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -350,7 +352,7 @@ Kideari jakinarazten zaio BROZERLYk, legearen arabera, edozein informazio edo ed
         </a>
       </div>
       <div class="row">
-        <div class="col s12 light">&copy; 2017 Brozerly</div>
+        <div class="col s12 light">&copy; 2018 Brozerly</div>
       </div>
     </div>
   </div>
