--- a/fr/faq.html
+++ b/fr/faq.html
@@ -17,9 +17,9 @@
 <link rel="canonical" href='https://www.brozerly.com/fr/'/>
 
 <meta property="description"
-      content="L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide économique pour les besoins personnels.. Brozerly te permet de demander de l'aide à ton réseau d'amis afin que tes contacts puissent t'aider. Crowdfunding app."/>
+      content="Gratuite et sans frais !. L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide pour les besoins personnels.. Brozerly te permets de demander de l'aide à ton réseau d'amis afin que te amis puissent t’aider à remplacer ou acheter l’objet dont tu rêves. Crowdfunding app."/>
 <meta name="description"
-      content="L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide économique pour les besoins personnels.. Brozerly te permet de demander de l'aide à ton réseau d'amis afin que tes contacts puissent t'aider. Crowdfunding app."/>
+      content="Gratuite et sans frais !. L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide pour les besoins personnels.. Brozerly te permets de demander de l'aide à ton réseau d'amis afin que te amis puissent t’aider à remplacer ou acheter l’objet dont tu rêves. Crowdfunding app."/>
 
 
 <!-- Mobile friendly  -->
@@ -60,11 +60,12 @@
 <meta property="og:url" content='https://www.brozerly.com/fr/'/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Brozerly"/>
-<meta property="og:description" content="L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide économique pour les besoins personnels.. Brozerly te permet de demander de l'aide à ton réseau d'amis afin que tes contacts puissent t'aider. Crowdfunding app."/>
+<meta property="og:description" content="Gratuite et sans frais !. L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide pour les besoins personnels.. Brozerly te permets de demander de l'aide à ton réseau d'amis afin que te amis puissent t’aider à remplacer ou acheter l’objet dont tu rêves. Crowdfunding app."/>
 <meta property="og:locale" content="fr_FR"/>
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="eu_ES" />
 <meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:image" content='https://www.brozerly.com/public/lang/fr/Landing.png'/>
 <meta property="og:image" content='https://www.brozerly.com/public/lang/fr/phone_BrozerlyApp.png'/>
 <meta property="og:rich_attachment" content="true"/>
 
@@ -72,7 +73,8 @@
 
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/>
+<!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/> -->
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:700,400,300,100" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400, 300" rel="stylesheet" type="text/css"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -171,7 +173,7 @@
        </div>
        <div class="collapsible-body">
          <p>
-           Brozerly est un réseau social permettant à un membre de demander une aide financière à son réseau d'amis sur l'application, similaire au crowdfunding, mais privé et destiné uniquement à financer des besoins personnels. <br><br> Sur nos profils Facebook, Twitter, Google Plus, nous partageons souvent des exemples de cas d'utilisation Brozerly. <br><br> Cette vidéo montre ce qu'est Brozerly. <div class='video-container'> <iframe width='800' height='480'src='https://www.youtube.com/embed/au9Pwtpk80Q?rel=0' frameborder='0' allowfullscreen)></iframe></div>
+           Brozerly est un réseau social permettant à un membre de demander une contribution financière à son réseau d'amis sur l'application, similaire au crowdfunding, mais privé et destiné uniquement à financer des besoins personnels. <br><br> Tu peux l'utiliser, par exemple, pour demander de l'aide à tes contacts ou pour faire un pot commun avec tes amis. Quelque chose que tu dois réparer, un cadeau commun, un dîner avec tes amis ... Tu décides à comment utiliser Brozerly. <br><br> Sur nos profils Facebook, Twitter, Google Plus, nous partageons souvent des exemples de cas d'utilisation de Brozerly. <br><br> Cette vidéo montre un exemple d'utilisation de Brozerly. <div class='video-container'> <iframe width='800' height='480'src='https://www.youtube.com/embed/au9Pwtpk80Q?rel=0' frameborder='0' allowfullscreen)></iframe></div>
          </p>
        </div>
      </li>
@@ -179,11 +181,11 @@
      <li>
        <div class="collapsible-header brozerly-faq-title">
          <i class="material-icons">help_outline</i>
-         Qu'est-ce qu'un SOS et comment demander de l'aide sur Brozerly?
+         Qu'est-ce qu'un SOS et comment demander des contributions sur Brozerly?
        </div>
        <div class="collapsible-body">
          <p>
-           Pour demander de l'aide sur Brozerly, lance un SOS dans lequel tu indiques le montant dont tu as besoin, la raison de celui ci (pour expliquer à tes amis pourquoi tu as besoin de leur aide) et la date limite de celui-ci pour indiquer quand tu souhaites disposer du montant sur ton compte bancaire. Quand tu lances un SOS, tes contacts dans Brozerly reçoivent une notification et peuvent contribuer à ton SOS s'ils le souhaitent. <br><br> Sur Brozerly il est également possible de lancer un SOS public afin que tous les utilisateurs Brozerly puissent contribuer. Tu peux également partager le SOS sur d'autres réseaux pour encourager d'autres personnes qui ne disposent pas encore d'un compte Brozerly à contribuer à ton SOS.
+           Pour demander des contributions sur Brozerly, lance un SOS dans lequel tu indiques le montant dont tu as besoin, la raison de celui ci (pour expliquer à tes amis pourquoi tu as besoin de leur aide) et la date limite de celui-ci pour indiquer quand tu souhaites disposer du montant sur ton compte bancaire. Quand tu lances un SOS, tes contacts dans Brozerly reçoivent une notification et peuvent contribuer à ton SOS s'ils le souhaitent. <br><br> Sur Brozerly il est également possible de lancer un SOS public afin que tous les utilisateurs Brozerly puissent contribuer. Tu peux également partager le SOS sur d'autres réseaux pour encourager d'autres personnes qui ne disposent pas encore d'un compte Brozerly à contribuer à ton SOS.
          </p>
        </div>
      </li>
@@ -241,7 +243,7 @@
         </a>
       </div>
       <div class="row">
-        <div class="col s12 light">&copy; 2017 Brozerly</div>
+        <div class="col s12 light">&copy; 2018 Brozerly</div>
       </div>
     </div>
   </div>
