--- a/fr/support.html
+++ b/fr/support.html
@@ -17,9 +17,9 @@
 <link rel="canonical" href='https://www.brozerly.com/fr/'/>
 
 <meta property="description"
-      content="L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide économique pour les besoins personnels.. Brozerly te permet de demander de l'aide à ton réseau d'amis afin que tes contacts puissent t'aider. Crowdfunding app."/>
+      content="Gratuite et sans frais !. L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide pour les besoins personnels.. Brozerly te permets de demander de l'aide à ton réseau d'amis afin que te amis puissent t’aider à remplacer ou acheter l’objet dont tu rêves. Crowdfunding app."/>
 <meta name="description"
-      content="L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide économique pour les besoins personnels.. Brozerly te permet de demander de l'aide à ton réseau d'amis afin que tes contacts puissent t'aider. Crowdfunding app."/>
+      content="Gratuite et sans frais !. L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide pour les besoins personnels.. Brozerly te permets de demander de l'aide à ton réseau d'amis afin que te amis puissent t’aider à remplacer ou acheter l’objet dont tu rêves. Crowdfunding app."/>
 
 
 <!-- Mobile friendly  -->
@@ -60,11 +60,12 @@
 <meta property="og:url" content='https://www.brozerly.com/fr/'/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Brozerly"/>
-<meta property="og:description" content="L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide économique pour les besoins personnels.. Brozerly te permet de demander de l'aide à ton réseau d'amis afin que tes contacts puissent t'aider. Crowdfunding app."/>
+<meta property="og:description" content="Gratuite et sans frais !. L'amitié est la meilleure des protections. Brozerly est ton application de crowdfunding pour les besoins personnels. La première application sociale d'entraide pour les besoins personnels.. Brozerly te permets de demander de l'aide à ton réseau d'amis afin que te amis puissent t’aider à remplacer ou acheter l’objet dont tu rêves. Crowdfunding app."/>
 <meta property="og:locale" content="fr_FR"/>
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="eu_ES" />
 <meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:image" content='https://www.brozerly.com/public/lang/fr/Landing.png'/>
 <meta property="og:image" content='https://www.brozerly.com/public/lang/fr/phone_BrozerlyApp.png'/>
 <meta property="og:rich_attachment" content="true"/>
 
@@ -72,7 +73,8 @@
 
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/>
+<!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/> -->
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:700,400,300,100" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400, 300" rel="stylesheet" type="text/css"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -192,7 +194,7 @@
         </a>
       </div>
       <div class="row">
-        <div class="col s12 light">&copy; 2017 Brozerly</div>
+        <div class="col s12 light">&copy; 2018 Brozerly</div>
       </div>
     </div>
   </div>
