--- a/faq.html
+++ b/faq.html
@@ -17,9 +17,9 @@
 <link rel="canonical" href='https://www.brozerly.com'/>
 
 <meta property="description"
-      content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+      content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 <meta name="description"
-      content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+      content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 
 
 <!-- Mobile friendly  -->
@@ -60,11 +60,12 @@
 <meta property="og:url" content='https://www.brozerly.com'/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Brozerly"/>
-<meta property="og:description" content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+<meta property="og:description" content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 <meta property="og:locale" content="es_ES"/>
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="eu_ES" />
 <meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:image" content='https://www.brozerly.com/public/lang/es/Landing.png'/>
 <meta property="og:image" content='https://www.brozerly.com/public/lang/es/phone_BrozerlyApp.png'/>
 <meta property="og:rich_attachment" content="true"/>
 
@@ -72,7 +73,8 @@
 
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/>
+<!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/> -->
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:700,400,300,100" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400, 300" rel="stylesheet" type="text/css"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -171,7 +173,7 @@
        </div>
        <div class="collapsible-body">
          <p>
-           Brozerly es una red social pensada para pedir ayuda económica en tu red de contactos de la aplicación, algo parecido al crowdfunding, pero de forma privada y pensado para necesidades personales. <br><br>En nuestros perfiles de Facebook, Twitter, Google Plus, solemos compartir ejemplos de casos de uso de Brozerly.<br><br>En este vídeo puedes ver un ejemplo de uso de Brozelry.<br><br><div class='video-container'> <iframe width='800' height='480'src='https://www.youtube.com/embed/RabNudn2pLI?rel=0' frameborder='0' allowfullscreen)></iframe></div>
+           Brozerly es una red social pensada para pedir ayuda económica en tu red de contactos de la aplicación, algo parecido al crowdfunding, pero de forma privada y pensado para necesidades personales. <br><br>Puedes utilizarlo, por ejemplo, para pedir ayuda a tus contactos o para hacer un bote común. Algo que necesitas reparar, un regalo en común, una cena con tus amigos... Tu decides para qué utilizar Brozerly. <br><br>En nuestros perfiles de Facebook, Twitter, Google Plus, solemos compartir ejemplos de casos de uso de Brozerly.<br><br>En este vídeo puedes ver un ejemplo de uso de Brozelry.<br><br><div class='video-container'> <iframe width='800' height='480'src='https://www.youtube.com/embed/RabNudn2pLI?rel=0' frameborder='0' allowfullscreen)></iframe></div>
          </p>
        </div>
      </li>
@@ -179,11 +181,11 @@
      <li>
        <div class="collapsible-header brozerly-faq-title">
          <i class="material-icons">help_outline</i>
-         ¿Qué es un SOS y cómo pido ayuda en Brozerly?
+         ¿Qué es un SOS y cómo solicitar contribuciones en Brozerly?
        </div>
        <div class="collapsible-body">
          <p>
-           La forma de pedir ayuda en Brozerly es lanzando un SOS en el que se indica el importe solicitado, la descripción (aquí es donde se explica para qué se solicita el dinero) y la fecha límite para las contribuciones. Cuando se lanza un SOS, a tus contactos en Brozerly les llega una notificación para que contribuyan a tu SOS si lo desean.<br><br> En Brozerly también es posible lanzar un SOS público de manera que todos los usuarios de Brozerly puedan contribuir. También puedes compartir el SOS en otras redes para animar a otras personas que no tengan cuenta en Brozerly a contribuir a tu SOS.
+           La forma de solicitar las contribuciones en Brozerly es lanzando un SOS en el que se indica el importe solicitado, la descripción (aquí es donde se explica para qué se solicita el dinero) y la fecha límite para las contribuciones. Cuando se lanza un SOS, a tus contactos en Brozerly les llega una notificación para que contribuyan a tu SOS si lo desean.<br><br> En Brozerly también es posible lanzar un SOS público de manera que todos los usuarios de Brozerly puedan contribuir. También puedes compartir el SOS en otras redes para animar a otras personas que no tengan cuenta en Brozerly a contribuir a tu SOS.
          </p>
        </div>
      </li>
@@ -241,7 +243,7 @@
         </a>
       </div>
       <div class="row">
-        <div class="col s12 light">&copy; 2017 Brozerly</div>
+        <div class="col s12 light">&copy; 2018 Brozerly</div>
       </div>
     </div>
   </div>
