--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <link rel="canonical" href='https://www.brozerly.com'/>
 
 <meta property="description"
-      content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+      content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 <meta name="description"
-      content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+      content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 
 
 <!-- Mobile friendly  -->
@@ -60,11 +60,12 @@
 <meta property="og:url" content='https://www.brozerly.com'/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Brozerly"/>
-<meta property="og:description" content="La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
+<meta property="og:description" content="¡ Gratis y sin comisiones !. La amistad es la mejor de las protecciones. Brozerly es tu aplicación de crowdfunding para las necesidades personales. La primera app social de ayuda económica para las necesidades personales. Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales. Crowdfunding app."/>
 <meta property="og:locale" content="es_ES"/>
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="eu_ES" />
 <meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:image" content='https://www.brozerly.com/public/lang/es/Landing.png'/>
 <meta property="og:image" content='https://www.brozerly.com/public/lang/es/phone_BrozerlyApp.png'/>
 <meta property="og:rich_attachment" content="true"/>
 
@@ -72,7 +73,8 @@
 
 
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/>
+<!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"/> -->
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:700,400,300,100" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400, 300" rel="stylesheet" type="text/css"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -168,13 +170,14 @@
   <div class="col s12 m8 valing">
     <div class="scrollreveal-block">
       <h1 class="light">La primera app social de ayuda económica para las necesidades personales</h1>
+      <h2 class="landing-pub">¡ Gratis y sin comisiones !</h2>
       <h2 class="landing-subtitle light">Brozerly te permite pedir ayuda en tu red de amigos para que tus contactos puedan ayudarte con tus necesidades personales.</h2>
     </div>
     <a href='http://play.google.com/store/apps/details?id=com.brozerly.app' target="_blank">
       <img class="landing_small-badge landing_google-play-small-badge scrollreveal-buttons-small-1" src='//play.google.com/intl/en_us/badges/images/generic/es_badge_web_generic.png' alt='Google Play Store'/>
     </a>
     <a href='https://geo.itunes.apple.com/app/brozerly/id1076641036?mt=8' target="_blank">
-      <img class="landing_small-badge landing_apple-small-badge scrollreveal-buttons-small-2" src='//linkmaker.itunes.apple.com/images/badges/es-es/badge_appstore-lrg.svg' alt='Apple App Store'/>
+      <img class="landing_small-badge landing_apple-small-badge scrollreveal-buttons-small-2" src='/public/app-store-badges/Download_on_the_App_Store_Badge_ES_RGB_blk_100217.svg' alt='Apple App Store'/>
     </a>
     <br/>
     <a class="waves-effect waves-light btn scrollreveal-buttons-small-3" id="landing-launch-button-small" href="https://app.brozerly.com" target="_blank">
@@ -313,7 +316,7 @@
       <img class="landing_big-badge landing_google-play-big-badge scrollreveal-buttons-big-1" src='//play.google.com/intl/en_us/badges/images/generic/es_badge_web_generic.png' alt='Google Play Store'/>
     </a>
     <a href='https://geo.itunes.apple.com/app/brozerly/id1076641036?mt=8' target="_blank">
-      <img class="landing_big-badge landing_apple-big-badge scrollreveal-buttons-big-2" src='//linkmaker.itunes.apple.com/images/badges/es-es/badge_appstore-lrg.svg' alt='Apple App Store'/>
+      <img class="landing_big-badge landing_apple-big-badge scrollreveal-buttons-big-2" src='/public/app-store-badges/Download_on_the_App_Store_Badge_ES_RGB_blk_100217.svg' alt='Apple App Store'/>
     </a>
     <br/>
     <a class="waves-effect waves-light btn scrollreveal-buttons-big-3" id="landing-launch-button-big" href="https://app.brozerly.com" target="_blank">
@@ -392,7 +395,7 @@
         </a>
       </div>
       <div class="row">
-        <div class="col s12 light">&copy; 2017 Brozerly</div>
+        <div class="col s12 light">&copy; 2018 Brozerly</div>
       </div>
     </div>
   </div>
